--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Digital Clinical Home page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    <base href="/">
     <link rel="stylesheet" href="node_modules/ng2f-bootstrap/dist/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 
